[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.18"
solana-sdk = "1.18"
solana-account-decoder = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"
bincode = "1.3"
base64 = "0.21"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
bs58 = "0.5"
ed25519-dalek = "1.0"
rand = "0.8"